# data-structures

./: .gitignore  CMakeLists.txt  TODO.md
demo/: CMakeLists.txt  array.cpp  balls.c  balls.cpp  burgers-fast.c  burgers.cpp  matrix.c  neighbours.cpp  queue.c  queue.cpp  stack.c  stack.cpp
examples/: CMakeLists.txt  airlines.cpp  array.cpp  avltree.cpp  bstree.cpp  deque.cpp  dllist.cpp  matrix.cpp  queue.cpp  sllist.cpp  stack.cpp
examples/QtAirlines/: CMakeLists.txt  main.cpp
examples/QtAirlines/NAirlines/: CMakeLists.txt  NAirlines.cpp  NAirlines.hpp  NAirlines.ui
examples/QtAirlines/NAirlines/Ticket/: CMakeLists.txt  Ticket.cpp  Ticket.hpp  Ticket.ui  TicketDialog.cpp  TicketDialog.hpp  TicketDialog.ui
examples/QtVisualizer/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
examples/QtVisualizer/MainWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
examples/QtVisualizer/MainWindow/Tabs/: CMakeLists.txt
examples/QtVisualizer/MainWindow/Tabs/TabDLL/: CMakeLists.txt  FrameDLL.cpp  FrameDLL.hpp  TabDLL.cpp  TabDLL.hpp  TabDLL.ui
examples/QtVisualizer/Visio/: CMakeLists.txt  Visio.cpp  Visio.hpp  Visio.ui
examples/QtVisualizer/Visio/Tabs/: CMakeLists.txt
examples/QtVisualizer/Visio/Tabs/TabAVLT/: CMakeLists.txt  FrameAVLT.cpp  FrameAVLT.hpp  TabAVLT.cpp  TabAVLT.hpp  TabAVLT.ui  TreeData.hpp
examples/QtVisualizer/Visio/Tabs/TabDLL/: FrameDLL.cpp  FrameDLL.hpp  TabDLL.cpp  TabDLL.hpp
lib/: CMakeLists.txt  array.cpp  array.hpp  datatype.h  node.hpp  queue-extended.cpp  queue-extended.hpp  queue.cpp  queue.hpp  stack-array.hpp  stack-extended.cpp  stack-extended.hpp  stack.cpp  stack.hpp
lib/matrix/: CMakeLists.txt  dynarr-extended.c  dynarr-extended.h  dynarr.c  dynarr.h
lib/node/: list.h
lib/node/tree/: red-black.h
lib/queue/: CMakeLists.txt  list-extended.c  list-extended.h  list.c  list.h  stack-dynarr.c  stack-dynarr.h
lib/stack/: CMakeLists.txt  list-extended.c  list-extended.h  list.c  list.h
src/: CMakeLists.txt
src/Array/: Array.cpp  Array.hpp  CMakeLists.txt
src/Deque/: CMakeLists.txt  Deque.hpp
src/List/: CMakeLists.txt  DLList.hpp  SLList.hpp
src/Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp
src/Queue/: CMakeLists.txt  Queue.hpp
src/Stack/: CMakeLists.txt  Stack.hpp
src/Tree/: AVLTree.hpp  BSTree.hpp  BTree.hpp  BTree.tcc  CMakeLists.txt
